--- a/3.2生命周期钩子.html
+++ b/3.2生命周期钩子.html
@@ -12,7 +12,10 @@
 
 		var vm = new Vue({
 			el: "#app",
-			template: "<div>hello world<</div>"
+			template: "<div>hello world<</div>",
+			data: {
+				test: 'test update'
+			},
 			beforeCreate: function() {
 				console.log("beforeCreate");
 			},
