--- a/5.2animate.css库.html
+++ b/5.2animate.css库.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>VUE中使用animate.css库</title>
-	<link rel="stylesheet" type="text/css" href="./animate.css">
+	<link rel="stylesheet" type="text/css" href="./animate.min.css">
 	<script type="text/javascript" src="./vue.js"></script>
 	<style>
 		/*CSS3*/
@@ -38,7 +38,7 @@
 		>
 			<div v-if="show">hello world</div>
 		</transition>
-		<button @click="handleClick">change</button>
+		<button @click="handleClick">toggle</button>
 	</div>
 
 	<script type="text/javascript">
